# texto-transformer

./: README.md  modelos.xlsx  pyproject.toml  requirements.txt  requirements_testes.txt  setup.cfg  setup.py  transformer.py
.github/workflows/: workflow.yml
modelolinguagem/: __init__.py  mcl.py  modelolinguagem.py
modelolinguagem/medidor/: medidor.py  medidorenum.py  mensurador.py
modelolinguagem/mensurador/: __init__.py  medidas.py  mensurador.py  mensuradorenum.py
modelolinguagem/modelo/: __init__.py  modeloarguments.py  modeloenum.py  modelomodulo.py  transformer.py
modelolinguagem/nlp/: __init__.py  nlpmodulo.py
modelolinguagem/pln/: pln.py
modelolinguagem/spacynlp/: spacymodulo.py
modelolinguagem/util/: __init__.py  utilambiente.py  utilarquivo.py  utilconstantes.py  utilmodulo.py  utiltempo.py
notebooks/: ExemplosTextoTransformer.ipynb  ExemplosTextoTransformer_en.ipynb  TestePacoteTextoTransformer.ipynb  TestesTextoTransformer.ipynb
src/: modelolinguagem.py
src/medidor/: medidas.py  medidorenum.py  mensurador.py
src/mensurador/: __init__.py  mensurador.py
src/modelo/: modeloarguments.py  transformer.py
src/nlp/: nlpmodulo.py
src/util/: utilambiente.py  utilconstantes.py  utilmodulo.py  utiltempo.py
testes/: README.md  test_medida.py  test_modeloenum.py  test_textotransformer.py  test_textotransformer_albert_en.py  test_textotransformer_bert_en.py  test_textotransformer_bert_ptbr.py  test_textotransformer_bert_ptbr_numpy.py  test_textotransformer_distilbert_en.py  test_textotransformer_gpt.py  test_textotransformer_gpt2_en.py  test_textotransformer_numpy.py  test_textotransformer_openaigpt.py  test_textotransformer_roberta_en.py  test_textotransformer_t5_en.py  test_textotransformer_t5_ptbr.py  test_textotransformer_xlmroberta.py  test_textotransformer_xlnet_en.py  test_textotransformermask_bert_en.py  test_textotransformermask_bert_ptbr.py  test_transformer.py  test_utilconversao.py  test_utiltexto.py
testes/mensurador/: test_medida.py  test_mensuradorenum.py
testes/modelos/: test_modeloenum.py  test_transformer.py
testes/util/: test_utiltempo.py  test_utiltexto.py
textotransformer/: __init__.py  textotransformer.py
textotransformer/mensurador/: medidas.py  mensurador.py  mensuradorenum.py
textotransformer/modelo/: modeloargumentos.py  modeloarguments.py  modeloenum.py  transformer.py  transformeralbert.py  transformerbert.py  transformerdistilbert.py  transformerfactory.py  transformergpt2.py  transformeropenaigpt.py  transformerroberta.py  transformert5.py  transformerxlmroberta.py  transformerxlnet.py
textotransformer/modificador/: modificador.py
textotransformer/pln/: pln.py
textotransformer/util/: utilambiente.py  utilarquivo.py  utilconstantes.py  utilconversao.py  utiltempo.py  utiltexto.py
