[project]
name = "modelolinguagem"
version = "0.0.1"
description = "Framework Multilingual para processamento de textos utilizando modelos de linguagem"
readme = "README.md"
requires-python = ">=3.6.0"
license = { file = "LICENSE" }

[tools.setuptools]
packages = ["modelolinguagem"]

authors = [
    { name = "Osmar de Oliveira Braz Junior", email = "osmar.braz@udesc.br" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["Framework", "Transformer","embedding","texto sentença","palavra","token"]

dependencies = ["transformers==4.26.1", 
			    "spacy==3.5.2"]

[project.urls]
repository = "https://github.com/osmarbraz/modelolinguagem/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"