[project]
name = "texto-transformer"
version = "0.0.5"
description = "Texto Transformer: Framework para processamento de textos utilizando modelos de linguagem baseados baseados em Transformer"
readme = "README.md"
requires-python = ">=3.6.0"
license = { file = "LICENSE" }

authors = [
    { name = "Osmar de Oliveira Braz Junior", email = "osmar.braz@udesc.br" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["Framework", "Transformer","embedding","texto", "sentença", "palavra", "token"]

dependencies = ["transformers==4.26.1", 
			    "spacy==3.5.2",
                "tqdm==4.65.0",
                "torch==2.0.1",
                "scipy==1.10.1",
                "numpy==1.22.4"
                ]

[project.urls]
repository = "https://github.com/osmarbraz/textotransformer/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"