[metadata]
name = modelolinguagem
version = 1.0.0
author = Osmar de Oliveira Braz Junior
author_email = osmar.braz@udesc.br
description = "Multilingual text embeddings"
long_description = file: README.md
keywords = Transformer, embedding, documento, sentença, palavra, token
license = BSD-3-Clause
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3.6
        Topic :: Scientific/Engineering :: Artificial Intelligence
		
[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6.0
install_requires =
     transformers=="4.26.1"
     spacy=="3.5.2"	
